--- a/web/prova.html
+++ b/web/prova.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
-<html lang="en" dir="ltr">
+<html>
 
 <head>
-  <meta charset="utf-8">
-  <title>Custom Range Slider | CodingNepal</title>
-  <link rel="stylesheet" href="range_sliders.css">
+  <title>N-Body Problem</title>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 
 <body>
-  <div class="range">
-    <div class="sliderValue">
-      <span>100</span>
-    </div>
-    <div class="field">
-      <div class="value left">
-        0</div>
-      <input type="range" min="10" max="200" value="100" steps="1">
-      <div class="value right">
-        100</div>
-    </div>
-  </div>
-  <!-- <script>
-    const slideValue = document.querySelector("span");
-    const inputSlider = document.querySelector("input");
-    inputSlider.oninput = (() => {
-      let value = inputSlider.value;
-      slideValue.textContent = value;
-      slideValue.style.left = (value / 2) + "%";
-      slideValue.classList.add("show");
-    });
-    inputSlider.onblur = (() => {
-      slideValue.classList.remove("show");
-    });
-  </script> -->
+  <div id="chart"></div>
+  <script>
+    // Retrieve the data from the Flask endpoint
+    fetch('/data')
+      .then(response => response.json())
+      .then(data => {
+        const x = data.x;
+        const y = data.y;
 
+        // Create a scatter plot using Plotly
+        const trace = {
+          x: x,
+          y: y,
+          mode: 'markers',
+          type: 'scatter'
+        };
+        const layout = {
+          title: 'N-Body Problem',
+          xaxis: {
+            title: 'X-axis'
+          },
+          yaxis: {
+            title: 'Y-axis'
+          }
+        };
+        const config = {
+          responsive: true
+        };
+        Plotly.newPlot('chart', [trace], layout, config);
+      });
+  </script>
 </body>
 
 </html>
